--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>    
-    <title>React Market</title>
+    <title>Function Collection</title>
   </head>
   <body>
     <div id="root"></div>
